Issue #407 The font color should be inherited to avoid "invisible" text.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -820,6 +820,10 @@ Usage (In Ghost editor):
     background: transparent;
 }
 
+.post-full-content pre code * {
+    color: inherit;
+}
+
 .post-full-content .fluid-width-video-wrapper {
     margin: 1.5em 0 3em;
 }
